fix: white background on mobile

--- a/addon/styles/addon.css
+++ b/addon/styles/addon.css
@@ -106,9 +106,10 @@ main {
     border: none;
     padding: var(--spacing-2);
     z-index: 1;
-    margin-top: var(--spacing-2);
     display: flex;
     flex-direction: row-reverse;
+    margin: var(--spacing-2) 0 0 0;
+    background: var(--color-white);
   }
 
   main .es-sidebar-toggle {
